2007-04-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_option): Changes to the radius of the radio button and
	the bullet. (Bug #429761, Tiago Cogumbreiro)

	* engines/redmond/src/redmond_gtk2_drawing.c:
	(redmond_draw_extension): Better fake the original redmond tabs.
	(Bug #430012, Tiago Cogumbreiro)

	* themes/Redmond/gtk-2.0/gtkrc:
	- Set appears-as-list mode for GtkComboBox
	  (Bug #429988, Tiago Cogumbreiro)
	- Set tab-overlap to 4 pixel.

2007-04-11  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:
	Updated for 2.10.1

	* themes/Clearlooks/gtk-2.0/gtkrc: Remove seperate styling of tooltips. Fixes
	bug 412982.

2007-04-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fixes to thickness

2007-04-08  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menuitem), (clearlooks_draw_menubaritem):
	* engines/clearlooks/src/clearlooks_draw_inverted.c:
	(clearlooks_inverted_draw_menuitem),
	(clearlooks_inverted_draw_menubaritem):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Trying to improve menuitems, following old clearlooks style.
	Changed thickness of menuitems in Clearlooks's gtkrc.

2007-04-06  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_button), (paint_shadow),
	(paint_entry_shadow), (paint_scrollbar_trough),
	(paint_scale_trough), (paint_progress_bar), (draw_arrow),
	(draw_check), (draw_option), (draw_box_gap), (draw_extension),
	(draw_focus), (draw_slider): Remove the use of some fixed colours and shading

2007-04-01  Benjamin Berg  <benjamin@sipsolutions.net>

	Fix appears-as-list mode of GtkComboBox:

	* engines/support/widget-information.c:
	(ge_combo_box_is_using_list):
	* engines/support/widget-information.h:
	Fixed ge_combo_box_is_using_list and make it privat

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_shadow):
	* themes/Clearlooks/gtk-2.0/gtkrc: